portfolio/PixelAgentOffice/v0.0.2/PRD.md
# PixelAgentOffice — Product Requirements Document

> **"AI 에이전트를 픽셀 직원처럼 채용·관리하는 게임형 데스크탑 앱"**

| 항목 | 내용 |
|---|---|
| **프로젝트 명** | PixelAgentOffice |
| **유형** | 데스크탑 앱 (Electron) · 개인 학습/포트폴리오 |
| **기간** | 2026-05-12 ~ 진행 중 (Day 14) |
| **버전** | **v0.0.2** — 외부 테스터 2차 배포 준비 (코드·문서·EXE 빌드 완료, 커밋·푸시·Releases 업로드 대기) |
| **상태** | v0.0.1 테스터 피드백 반영 — **진급·메모리·칭찬 실동작 완성** + **튜토리얼/온보딩(문 비서)** + 일일 비용 상한 실제 차단 + 테스트 그물 복구 |
| **읽는 시간** | ☕ 10~13분 (skim 3분) |
| **저장소** | private — 코드/기획/시안 일체 보관 |
| **시안** | v0.0.2 EXE 빌드 완료 → 본 폴더에 동기화됨: [user-flow.md](user-flow.md) · [wireframes.html](wireframes.html) · [FEATURES.md](FEATURES.md) · [code-snapshot/](code-snapshot/). (이전 [v0.0.1 산출물](../v0.0.1/)) |
| **이전 버전** | [v0.0.1 PRD](../v0.0.1/PRD.md) (Day 12 — EXE 1차 배포 시점) · [v0.0.0 PRD](../v0.0.0/PRD.md) (Day 7, M3 시점) |

---

## 📌 30초 요약

AI 에이전트는 강력하지만 **일반 사용자에겐 진입 장벽이 너무 높다**. 코드, 터미널, JSON 설정, 추상적 오케스트레이션 개념. 그런데도 많은 일반 사용자가 ChatGPT/Claude 앱에서 **"인격을 부여한 페르소나 채팅"**(편집자, 칸트, 작가 등)을 일상적으로 사용한다.

**PixelAgentOffice는 이 행동을 "픽셀 사무실 + 직원 관리 게임"으로 게임화**한다:
- 🐙 픽셀 캐릭터를 "직원"으로 채용 (Mary 편집자 / Haewol 작가 / Cody 개발자 / 커스텀 문어)
- 🎯 이름·역할·성격(MBTI 16종)·외형·모델을 시각적으로 설정
- 💬 더블클릭/말풍선으로 대화 — 응답에 따라 머리 위 **감정 이모지**(12종)가 실시간 변화
- 📝 책상 위 메모지로 직원 관리 + 기본 감정 설정 + **메모리(기억) 요약**
- 📈 대화·메모 활동이 쌓이면 **직급 진급 요청** (활동/시간/정성형 등 진급 방식 선택)
- 🛒 상점에서 가구 구매 → 드래그/배치로 내 사무실 꾸미기
- 🌙 일일 비용 한도 도달 시 **강제 야간** (시그니처 폴리시 — 이제 실제 차단)
- 🎓 첫 실행 시 **문 비서**가 사장님(사용자)에게 회사를 안내하는 튜토리얼

**차별점(현재)**: 단순 채팅 도구가 아닌 *"애착이 생기는 환경"*. 다만 이 차별점이 **진짜 해자(moat)인지는 미검증** — §2.4·§8에 정직하게 기록. 강한 차별화 전략은 출시 후 v3에서 정립 예정.

**현재**: v0.0.1 portable `.exe`를 외부 테스터에게 배포 → 1차 피드백("튜토리얼/온보딩 필요", 버그 2건)을 반영해 **v0.0.2로 빌드 완료**한 단계 (커밋·푸시·Releases 업로드 대기).

---

## 1. Problem · 풀고자 한 문제

### 1.1 외부 문제 (사용자 관찰)

- **AI 에이전트 도구의 진입 장벽**: 대부분의 멀티 에이전트 도구(AutoGen, CrewAI 등)가 개발자 대상. 일반 사용자는 코드 작성·YAML 설정·터미널 실행을 못 함.
- **하지만 일반 사용자도 "페르소나 대화"는 이미 잘 쓴다**: ChatGPT/Claude 앱에서 "당신은 편집자입니다", "당신은 철학자 칸트입니다" 같은 시스템 프롬프트 활용.
- **격차**: 페르소나 대화 사용자 ↔ 멀티 에이전트 도구 → 중간 다리가 없음.

### 1.2 관찰 사례
> 본 프로젝트 사용자의 동생: 글 작업할 때마다 ChatGPT 채팅창에 "당신은 편집자입니다. 원고를 받으면..." 를 반복 입력. **같은 페르소나를 재사용하고 싶지만 채팅창 분리가 안 됨.**

### 1.3 기존 솔루션 한계

| 기존 도구 | 한계 |
|---|---|
| Claude.ai Projects | 페르소나 분리는 OK, 다만 멀티 에이전트 X, 시각적 매력 X |
| AutoGen / CrewAI | 개발자 전용, 시각화 X |
| ChatGPT Custom GPTs | 분리 OK, 무료 사용자 제한 |
| Character.ai | 캐릭터 매력 ↑, 작업 도구로는 약함 |

→ **"애착 가질 수 있는 작업 도구"의 빈자리.** (단, 이 빈자리가 충분히 큰지·방어 가능한지는 §2.4 참조)

---

## 2. Vision · 차별화

### 2.1 한 줄 비전

> "*Two Point Hospital + The Sims + AI Town*의 게임 메커니즘으로 AI 에이전트 관리를 풀어낸다."

### 2.2 핵심 차별점 3가지

| | 기존 도구 | PixelAgentOffice |
|---|---|---|
| **설정** | 코드/YAML 작성 | 캐릭터 선택 + 이름 짓기 + MBTI 부여 |
| **관리** | JSON 그래프 / 명령어 | 책상 위 📝 메모지 클릭 + 진급 |
| **모니터링** | 로그 응시 | 사무실 둘러보기 + 직원 감정 이모지 |
| **에러** | 빨간 메시지 | 직원이 시무룩해함 / 친절 한글 안내 |

### 2.3 디자인 원칙

1. **사용성 + 재미를 동시에** — 기능만 동작하는 도구가 아닌, *내 사무실에 애착이 생기는* 환경.
2. **사용자 부담 최소화** — 사용자는 "지침"만 직접 관리, "메모리"는 시스템이 백그라운드 처리.
3. **점진적 노출** — 첫 실행 시 **문 비서 튜토리얼**(강제 메리 채용 → 채팅 → 메모/상점/설정 안내). 익숙해지면 MBTI·진급·꾸미기 등 게임적 요소 자연스럽게 확장.
4. **픽셀 일관성** — 모든 요소(캐릭터·책상·가구·UI)를 같은 픽셀 그리드 시스템으로 통일. (단, 12×12 그리드의 시각 한계 → 고해상도 디테일은 PNG asset 도입 시 확장 예정)

### 2.4 차별점에 대한 정직한 평가 ★ (v0.0.2 신규)

> 포트폴리오 정직성을 위해, "강한 차별점이 있는 척"하지 않고 **현재 상태를 솔직하게** 적는다.

- **현재 차별점 = "시각적 매력 + 캐릭터 애착 + 게임적 재미"** 다. 이것은 *경험의 차별점*이지, 기능적으로 **대체 불가능한 해자(moat)는 아니다.**
- 핵심 기능(페르소나 분리·지침 재사용·여러 에이전트 관리)은 사실상 **Claude Projects / Custom GPTs로도 상당 부분 대체 가능**하다. 우리는 "더 쉽고 더 정겹게"일 뿐, "여기서만 되는 것"은 아직 약하다.
- 즉 **"왜 이걸 써야 하는가"에 대한 방어선이 아직 얇다.** 재미·애착이 리텐션으로 이어지는지는 v0.0.1 테스터 피드백으로 검증 중.
- **결정**: 강한 차별화(해자) 전략 — 예: 멀티 에이전트 협업 워크플로우(Phase 2 Seegene 임포트), 로컬 파일/작업 연동, 캐릭터 성장 서사 — 은 **출시 후 v3에서 본격 정립**한다. v0.0.2 PRD는 그 전략을 *아직 적용하지 않은 현재 상태*로 기록한다.
- 상세 보류 근거: `HANDOFF §6.P (페르소나/해자 → v3)`, `ideas/00-brainstorming-log §130`.

---

## 3. Target Users · 페르소나

### 3.1 Primary — *"페르소나 채팅을 일상적으로 쓰는 일반 사용자"*

| 항목 | 내용 |
|---|---|
| 직군 | 작가, 학생, 디자이너, 마케터, 1인 사업자 |
| LLM 사용 경험 | ChatGPT/Claude 무료 또는 Pro 구독 사용 중 |
| 페인포인트 | 페르소나마다 채팅창 분리 안 됨, 매번 시스템 프롬프트 복붙, 캐릭터 일관성 부족 |
| 기대 | "내 글쓰기 도우미 Mary"가 매번 같은 톤으로 답해주길 |
| 기술 수준 | 코드 못 씀, GUI만 가능 |

### 3.2 Secondary — *"AI 도구 얼리어답터 / 개발자"*

| 항목 | 내용 |
|---|---|
| 직군 | 개발자, AI 엔지니어, 프로덕트 매니저 |
| LLM 사용 경험 | API 키 사용 익숙, 여러 모델 비교 |
| 페인포인트 | 자기 워크플로우에 맞는 에이전트 도구 부족, 멀티 에이전트 시각화 도구 부족 |
| 기대 | 자기 프로젝트 에이전트들을 시각화하고 싶음 (Phase 2: Seegene 같은 케이스) |
| 기술 수준 | 코드 작성 가능 |

### 3.3 Anti-Persona — 본 도구가 적합하지 않은 사람

- 단순히 한 번 쓰고 마는 사용자 (커스터마이징 가치 0)
- 진지한 협업 워크플로우 필요 (B2B SaaS 영역)

---

## 4. Key Features · 기능

> 범례: ✅ 완성·검증 / 🟡 부분 구현(골격·UI는 있으나 핵심 로직 미연결 또는 출시 위해 의도적 숨김) / 📋 계획

### 4.1 현재 완성 (M0~M5 + Day 7~14, v0.0.2 기준)

#### 기반 (M1~M3)
| 영역 | 기능 | 상태 |
|---|---|---|
| 기본 동작 | Electron 데스크탑 앱, **빈 사무실로 시작**(테스터가 직접 첫 채용) | ✅ |
| 픽셀 사무실 | Phaser 4 기반 픽셀 그리드 사무실 (캐릭터·책상·창문 풍경·시계·구름) | ✅ |
| 채용 | 템플릿(Mary 편집자 / Haewol 작가 / Cody 개발자 / 커스텀) → 이름·역할·직급·진급방식·MBTI·외형·모델 | ✅ |
| 기본값 자동 채움 | 기본 캐릭터 선택 시 이름·역할·지침·색·무늬 자동 입력 | ✅ |
| 지침 편집 | 메모지 → 기본 지침(읽기 전용) + 커스텀 지침(편집) | ✅ |
| 다중 LLM | Anthropic Claude(Opus/Sonnet/Haiku) + Google Gemini(2.5 Pro/Flash) | ✅ |
| API 키 보안 | OS 키체인(safeStorage) provider별 암호화 저장 | ✅ |
| 영속화 | JSON 파일(`%APPDATA%`)에 직원·설정·채팅 이력·배치 가구·메모리 저장 | ✅ |

#### LLM 안정성·UX (M4)
| 영역 | 기능 | 상태 |
|---|---|---|
| Rate limit | sliding-window RPM 사전 차단, 친절 한글 에러(raw URL 노출 차단) | ✅ |
| 채팅 중단 | AbortController 체인 | ✅ |
| 사용량 시각화 | 칩/토글 + 비용 추정 + 설정 모달 상세 표(모델별 RPM 막대) | ✅ |
| **일일 비용 상한 실제 차단** ★ | 유료 모델 누적 비용이 한도 도달 시 dispatch 단계에서 **실제 차단**(친절 안내) + 강제 야간. 날짜별 영속화(`usage-daily.json`, 자정 초기화·재시작해도 유지) | ✅ |
| 페르소나 자리비움 | 14종 랜덤 게임 상태 메시지(☕커피/🚽화장실 등) | ✅ |
| 채팅 영속화 | employee별 대화 이력 보존 (앱 재시작 후도 유지) | ✅ |

#### 사무실·캐릭터 (M5 + Day 7~11)
| 영역 | 기능 | 상태 |
|---|---|---|
| 자리/팀 시스템 | 사장 1 + 3팀 × 5명 = 16자리, 직급 자격(과장↑ 리더, 사장↑ 사장석), 팀 동적 중앙정렬 | ✅ |
| 자리 이동 | 우클릭 → 드래그앤드롭 자리 변경 + 자격 검증 | ✅ |
| 책상 회전 | front/right/left 순환 (캐릭터·우클릭 zone 함께 회전) | ✅ |
| 시간대 | 5단계 자동 전환(아침/점심/노을/저녁/밤) RGB 보간 | ✅ |
| 토큰 보드 | 사장석 뒤 LED 액자, 비용 임계 🟢🟡🔴 + 깜빡임 | ✅ |
| **강제 야간** | 일일 비용 한도 도달 시 사무실 어두워짐 (이제 RPM이 아닌 **예산 기반**으로 동작) | ✅ |
| 줌·카메라 | 휠 줌 + 토글 버튼 (핀치는 모바일 단계로 보류) | ✅ |
| 팻말·이름 수정 | 팀 라벨 우클릭 → 이름 수정 모달, 직급 팻말 표시 | ✅ |

#### 감정·성격 (Day 11~12) ★ v0.0.1 핵심
| 영역 | 기능 | 상태 |
|---|---|---|
| **감정 시스템** | 말풍선 12종 이모지(😄😴🤔💡❤️😡 등). LLM 응답에 `[emotion:xxx]` 태그 강제 → 파싱 → 5초 표시 → 기본 감정 복귀 | ✅ |
| 기본 감정(idle) | 직원별 평소 표정을 메모 모달에서 12종 중 선택 | ✅ |
| **MBTI 16종 페르소나** | 채용 시 MBTI 부여 → LLM system prompt에 페르소나 지침 자동 주입 | ✅ |

#### 진급·메모리·칭찬 (Day 13) ★★ v0.0.2 핵심 — 이전 🟡 → 완성
| 영역 | 기능 | 상태 |
|---|---|---|
| **활동 카운터 연결** | 대화 성공 시 `totalMessages++`, 지침 실제 변경 시 `totalMemoryUpdates++` — 원자적 증가 함수(`incrementEmployeeStats`)로 5계층 배선 (이전 0으로 박제됐던 문제 해소) | ✅ |
| **직급 진급 시스템** | 9단계 직급 + 진급방식 5종(활동/시간/정성/혼합/끔) + 순수 함수 판정(`promotion.ts`) + 기준 달성 시 **진급 요청 모달** → 사장 승인 + 자동 부장 상한 + 이사 수동 임명 | ✅ |
| 진급 속도 설정 | 설정 모달에서 진급 속도 배수 조절(NaN/0/음수 → 1 안전 보정) | ✅ |
| **칭찬 카운트** | 채팅 응답에 👍 버튼 → `totalPraises++` (정성형 진급 모드의 입력) | ✅ |
| **메모리(기억) 시스템** | 직원별 기억을 JSON 영속화 → system prompt에 자동 주입 + 메모 모달 🧠 기억 섹션에서 **수동 요약** | ✅ |

#### 상점·꾸미기 (Day 11~12)
| 영역 | 기능 | 상태 |
|---|---|---|
| 상점 | 🛒 가구 카탈로그 + 실제 사무실과 동일한 픽셀 미리보기 | ✅ |
| 가구 배치 | 클릭 위치에 배치(ghost preview), 드래그 이동, 우클릭 메뉴(옮기기/삭제/전체삭제) | ✅ |
| 감정 미리보기 | 12종 감정을 캔버스로 즉시 미리보는 모달 | ✅ |

#### 온보딩·튜토리얼 (Day 14) ★★ v0.0.2 핵심 — v0.0.1 피드백 T1 대응
| 영역 | 기능 | 상태 |
|---|---|---|
| **문 비서 튜토리얼** | 마스코트 "문 비서"가 **존댓말로 사장님(사용자)에게 회사를 안내**. box-shadow 스포트라이트 + 포인터 통과 + 마스코트 카드 | ✅ |
| **첫 실행 자동 연속 흐름** | 첫 실행 시 **강제 메리 채용**(폼 잠금) → 채팅 → 메모/상점/설정까지 끊김 없이 연속 안내(FIRST_RUN_STEPS + zone 오케스트레이션) | ✅ |
| 멀티 트랙 | 메인/메모지/상점/설정 트랙 분리 — 각 버튼 🎓로 개별 재생 가능 | ✅ |
| 스크롤·포커스 보정 | 포커스 대상이 화면 밖이면 **먼저 스크롤 → 그 다음 하이라이트**. 정보 팝업(MBTI ⓘ 등) 열리면 스포트라이트 일시 숨김 | ✅ |
| API 키 미니 팝업 | 설정 → "API 키 설정 열기" → 별도 `ApiKeyModal`로 분리(Day 14 재설계) | ✅ |
| 데모 모드 | API 키 없이도 둘러볼 수 있는 데모 응답 경로 | ✅ |

#### 배포·품질 (Day 12~14) ★
| 영역 | 기능 | 상태 |
|---|---|---|
| **Platform Adapter** | Electron API를 환경별 adapter로 추상화(미래 모바일 진입 격리) | ✅ |
| **portable EXE** | `electron-builder` → `pnpm dist:exe` → 설치 없는 단일 `.exe` (v0.0.1 배포 완료, **v0.0.2 빌드 완료** — `release/PixelAgentOffice-0.0.2-portable.exe`) | ✅ |
| **테스트 그물 복구** ★ | **vitest 유닛 24개**(promotion/seats 순수 함수, 앱 실행 불필요·~1초) + **Playwright E2E 9개**(Electron 실행 기반: 빈 사무실 채용·API 키 흐름) | ✅ |

### 4.2 부분 구현 · 의도적 보류 🟡

> 포트폴리오 정직성을 위해 명시. 상세는 `HANDOFF "미완·멈춤 레지스터"` 및 `FEATURES.md` 참조.

| 기능 | 있는 것 | 빠진 것 / 이유 |
|---|---|---|
| **메모리 4모드 셀렉터** | 메모리 저장·주입·**수동 요약은 실동작**(§4.1) | off/manual/ask/auto **모드 선택 UI는 출시 단순화를 위해 숨김** — 야간 자동 압축은 후속 |
| v2.5 외형 디테일 | 액세서리·책상 소품·눈 표정 코드 보존 | 12×12 그리드 한계로 시각 비활성 (PNG asset 대기) |
| 가구 카탈로그 확장 | 상점·배치 시스템 완성 | 일부 가구 "출시예정" 표기 — 점진 추가 |

### 4.3 계획 (v3~)

- **v3 리팩토링**: god-file 분해 + `eventBus` 타입화 + `useTutorial` 훅 추출 + Phaser 스프라이트 모듈화 (출시 후 기술 부채 정리)
- **v3 해자 전략**: §2.4의 강한 차별화 — 멀티 에이전트 협업·로컬 작업 연동·캐릭터 성장 서사 중 검증
- **CI**: 커밋 시 `pnpm test:unit` 자동 실행
- **메모리 자동 압축**: 4모드 실동작 + 야간 자동 요약 부활
- **Phase 3 백엔드**: BYOK 프록시 서버 → 모바일 진입 기반
- **Phase 5 모바일**: Tauri/Capacitor → iOS/Android
- **PNG asset 도입**: 캐릭터/가구 고해상도 → v2.5 외형 부활

### 4.4 기능 우선순위 의사결정

기능을 추가할 때마다 3가지 질문:
1. **사용자에게 *진짜* 가치인가?** (재미만으론 부족, 작업 가치도 ↑)
2. **현재 단계에 필요한가?** (테스터 배포엔 첫 사용자 온보딩·핵심 흐름 우선)
3. **다른 기능과 시너지인가?** (예: 감정 시스템 ↔ MBTI ↔ 진급 = 캐릭터 개성·성장의 통합)

---

## 5. User Journeys · 사용자 여정

> v0.0.2 실제 흐름 기준. 상세 플로우 다이어그램은 [user-flow.md](user-flow.md) (v0.0.2로 갱신 — 문 비서 튜토리얼·진급 플로우 추가).

### 🎬 Journey 1 — 신규 테스터 첫 30분 (v0.0.2 튜토리얼)

```
1. PixelAgentOffice-0.0.2-portable.exe 다운로드 → 더블클릭
   (SmartScreen 경고 시 "추가 정보 → 실행" 안내 동행)
2. 빈 사무실 → 문 비서 등장: "사장님, 어서 오세요" (존댓말 안내 시작)
3. [강제 메리 채용] — 폼이 메리로 잠겨 첫 직원을 확실히 채용
4. 채팅 안내 → "안녕!" → 응답 + 머리 위 감정 이모지 5초
5. 문 비서가 [메모지 열기] → 지침·기본 감정·🧠 기억·진급 진행도 설명
6. 이어서 [상점 🛒] → 가구 안내, [설정 ⚙] → API 키·일일 한도 안내
7. 튜토리얼 종료 — 이후 각 버튼의 🎓로 개별 재생 가능
8. 실제 API 키 등록(설정 → API 키 설정 열기) → 진짜 대화 시작
```

### 🎬 Journey 2 — 글쓰기 작업 + 성장 시나리오

```
1. Haewol(작가)의 💬 클릭 → 채팅
2. 원고 붙여넣기 → "이 글에 비유 한 개 추가해줘"
3. Haewol 응답 — 바다·별 비유 + 머리 위 💡(idea) 이모지
4. 좋은 답에 👍 칭찬 → totalPraises++ (정성형 진급 입력)
5. 대화·메모가 쌓이면 진급 기준 달성 → 진급 요청 모달 → 사장 승인 → 직급 팻말 갱신
```

### 🎬 Journey 3 — 야간 시그니처 (이제 실제 차단)

```
1. 유료 모델 채팅 누적 → 비용 임계 접근 → 토큰 보드 🟡→🔴 깜빡임
2. 일일 한도 도달 → dispatch 단계에서 실제 차단(친절 안내) + 강제 야간(사무실 어두워짐)
3. 자정 지나면 일일 사용량 초기화 → 다시 밝아짐 (무료 Gemini는 한도 무관)
```

### 🎬 Journey 4 — Seegene 멀티 에이전트 임포트 (Phase 2 / v3 해자 후보)

```
1. 엘리베이터 → Floor 2 (Team Office)
2. `.claude/agents/` 폴더 임포트 → 서브에이전트 자동 배치
3. Leader가 워커에게 분배 → 결과 검수 보고
```
*(Phase 2 계획 — 미구현. §2.4의 해자 후보로 v3에서 검토)*

---

## 6. Information Architecture · 구조

### 6.1 화면 계층

```
App Shell
├─ TopBar (직원 카운터 / + 채용 / 🛒 상점 / ⚙ 설정)
├─ Stage (Phaser 사무실 씬: 캐릭터·책상·가구·시간대·토큰보드·감정 말풍선·직급 팻말)
├─ ChatPopup (우측 하단 채팅창 — 👍 칭찬 버튼)
├─ TutorialOverlay (문 비서 스포트라이트 + 마스코트 카드)
└─ StatusBar (직원수·시간대·오늘 누적 비용 라이브)

모달 레이어
├─ HireModal (채용, 첫 실행 시 잠금) ─┬─ 알림 모달(중첩) · MBTI 설명 모달(중첩)
├─ SettingsModal (설정) ─ 사용량 상세 · 진급 속도 · 일일 한도
│   └─ ApiKeyModal (API 키 미니 팝업, Day 14 분리)
├─ MemoModal (메모지: 지침·기본감정·🧠 기억·진급 진행도·모델·해고)
├─ PromotionModal (진급 요청 → 사장 승인)
├─ ShopModal (🛒 상점) ─ EmotionPreviewModal (감정 미리보기)
└─ 컨텍스트 메뉴 (캐릭터 우클릭 / 가구 우클릭)
```

### 6.2 데이터 모델 (현재)

```typescript
type Employee = {
  id: string
  template: 'editor' | 'writer' | 'developer' | 'custom'
  name: string
  role: string
  emoji: string
  baseInstructions: string       // 읽기 전용 (정체성)
  customInstructions: string     // 사용자 편집
  model: Model                   // Claude/Gemini
  memoryModel: Model
  memoryMode: 'off' | 'manual' | 'ask' | 'auto'   // 🟡 셀렉터 숨김(저장·주입·수동요약은 동작)
  mbti?: MBTI                    // 16종 페르소나
  idleEmotion?: BubbleEmotion    // 평소 말풍선 감정 (12종)
  customColor?: string           // 커스텀 외형
  pattern?: CharacterPattern     // solid/speckled/gradient/stripes
  seatId: SeatId                 // 'boss' | 'leader:A' | 'member:A:0' ...
  deskOrientation: 'front' | 'right' | 'left'
  rank: Rank                     // 알바~레전드 (✅ 진급 로직 동작)
  promotionMode: PromotionMode   // ✅ 5종 (활동/시간/정성/혼합/끔)
  hiredAt: ISO
  totalMessages: number          // ✅ 대화 성공 시 증가
  totalMemoryUpdates: number     // ✅ 지침 변경 시 증가
  totalPraises: number           // ✅ 👍 칭찬 시 증가
}

type Settings = {
  defaultModel: Model
  defaultMemoryModel: Model
  dailyLimitUsd: number                  // ✅ 실제 차단 (유료만, 자정 초기화)
  promotionSpeedMultiplier: number       // ✅ 진급 속도 배수
  usageDisplayMode: 'chips' | 'toggle'
  teamNames: Record<TeamId, string>
  placedFurniture: PlacedFurniture[]
  // API 키는 별도 OS 키체인 / 메모리는 별도 영속화
}
```

### 6.3 컨텍스트 레이어 + 페르소나 (LLM 시스템 프롬프트 구성)

```
[Layer 1] 기본 지침   — 채용 시 결정, 읽기 전용 (캐릭터 정체성)
[Layer 2] 커스텀 지침 — 사용자가 직접 편집 (행동 규칙)
[Layer 3] MBTI 페르소나 — mbti 있으면 성향·대답 방식 자동 주입
[Layer 4] 감정 태그 지침 — 응답 마지막에 [emotion:xxx] 강제
[Layer 5] 메모리(기억)  — ✅ 저장된 기억을 system prompt에 주입 (자동 압축은 후속)
       모두 합쳐서 → Claude/Gemini API에 system prompt로 전송
```

---

## 7. Technical Architecture

```
┌──────────────────────────────────────────────────┐
│         PixelAgentOffice-0.0.2-portable.exe        │
│                                                    │
│  ┌─ Renderer (Chromium) ─────────────────────┐     │
│  │  React 19 + Phaser 4                       │     │
│  │  ├─ Phaser canvas (사무실 씬)              │     │
│  │  ├─ React DOM (모달/채팅/상단바/튜토리얼)   │     │
│  │  └─ src/platform/ (Platform Adapter)       │     │
│  └────────────┬───────────────────────────────┘     │
│               │ IPC (preload.ts) / platform.* 추상화 │
│  ┌────────────▼─────────────────────────────────┐   │
│  │  Main Process (Node.js)                      │   │
│  │  ├─ data/store.ts (JSON 영속화)              │   │
│  │  └─ llm/ dispatch·anthropic·gemini·usage·    │   │
│  │     errorMessages·apiKeys(safeStorage)       │   │
│  └──────────┬───────────────────────────────────┘   │
└─────────────┼─────────────────────────────────────┘
              │ HTTPS
       ┌──────▼──────────┐
       │  Anthropic /    │
       │  Google         │
       └─────────────────┘
```

**핵심 디자인 결정**:
- **Hybrid 렌더링**: Phaser(게임 씬) + React(UI 모달). 각자 강점.
- **Platform Adapter**: `src/platform/`로 Electron API 격리 → 미래 Web/모바일 진입 시 컴포넌트 코드 무변경.
- **Provider Abstraction**: `LLMProvider` 인터페이스로 Groq/Ollama 추가 용이. dispatch → registry → anthropic/gemini, 타입화된 `LLMError` 분류(DAILY_LIMIT 포함).
- **일일 비용 영속화**: 날짜별 키(`usage-daily.json`) + 원자적 쓰기(temp+rename) + main 프로세스 하드 차단.
- **API 키 분리 저장**: provider별 별도, OS 키체인 암호화.
- **픽셀 렌더링**: `drawPixelGrid()` 문자열 배열 → 픽셀 사각형. 12×12 한계는 PNG asset로 확장 예정.

### 7.1 테스트 피라미드 (Day 14 복구)

| 층 | 도구 | 특징 |
|---|---|---|
| 유닛 | **vitest** | 순수 함수(promotion/seats) 24개. 앱·브라우저 불필요, ~1초. 빠른 회귀 그물 |
| 통합 | (RTL, 후속) | 컴포넌트 단위 |
| E2E | **Playwright** | 실제 Electron 실행. 빈 사무실 채용·API 키 흐름 9개 (격리 임시 userData에 시드) |

> **적대적 리뷰 ≠ 실행 테스트**: AI가 코드를 읽어 결함을 찾는 적대적 리뷰는 *정적 분석*이고, 앱을 띄워 동작을 확인하는 건 E2E/유닛이다. 둘은 보완 관계.

### 7.2 알려진 기술 부채 (v3 정리 예정)

- 일부 god-file(App.tsx·OfficeScene.ts 등) 비대 → 모듈 분해 필요
- `eventBus`가 stringly-typed → 타입 안전성 약함 (이벤트 이름 오타 컴파일타임 미검출)
- 튜토리얼 로직이 App에 산재 → `useTutorial` 훅 추출 후보
- → **출시 후 v3에서 리팩토링**. `HANDOFF §6.Q` 참조.

### 7.3 Electron이란? (비개발자용)

> **Electron** = 웹 기술(React/HTML/CSS)로 데스크탑 앱(.exe)을 만드는 프레임워크. VS Code, Discord, Slack, Notion이 모두 Electron 기반. `.exe` 더블클릭 즉시 실행 + 웹 기술 재사용 + OS 키체인/파일 접근. 한계는 iOS/Android 미지원(데스크탑 전용) → 모바일은 Platform Adapter로 격리해 후속 대응.

---

## 8. Business Model

### 8.1 검증된 한계
> "이미 Claude를 쓰는 사람에게 UI만 무료 제공" → **Anthropic ToS상 불가능**.

### 8.2 BYOK (Bring Your Own Key) 모델 채택
- 사용자가 직접 API 키 발급 + 결제 / 우리는 비용·법적 책임 0
- 단점: 카드 등록 부담 → 백엔드 프록시(Phase 3)로 완화 검토
- 완화 1차: **데모 모드**(키 없이 둘러보기) + **일일 비용 상한 실제 차단**(과금 사고 방지)

### 8.3 사업성에 대한 정직한 평가 (§2.4 연계)

- 현재는 **수익 모델보다 "사용자가 계속 쓰는가(리텐션)"를 먼저 검증**하는 단계다.
- BYOK는 진입 장벽이고, 차별점(§2.4)이 약하면 "굳이 이걸?"이 된다 → 따라서 **해자 전략(v3)이 사업성의 전제**다.
- v0.0.1 테스터 피드백 → v0.0.2 온보딩 강화 → 리텐션 신호 확인 후 Phase 3(백엔드)·해자(v3) 판단.

### 8.4 진입 장벽 완화 — 옵션 분석

| 옵션 | 카드 등록 | 작업 | 경험 |
|---|---|---|---|
| A. BYOK 유지 (현재) | 필수 | 0 | 개발자/얼리어답터 |
| B. 백엔드 SaaS | 0 | 며칠 | 진짜 무료, 사업 결심 |
| C. Groq 추가 | 불필요 | 5분 | 무료, 품질 ↓ |
| D. 데모 모드 (일부 적용) | 불필요 | 적용됨 | 둘러보기 |

→ 모바일 진입과 함께 **B(백엔드 + BYOK 프록시)** 로 결정. 현재는 A(BYOK) + D(데모)로 테스터 배포.

---

## 9. Success Metrics · 성공 지표

### 9.1 학습/포트폴리오 단계 (현재 달성)

| 지표 | 측정 |
|---|---|
| ✅ 풀스택 데스크탑 앱 | Electron/React/Phaser/LLM + Platform Adapter |
| ✅ 다중 LLM | Claude + Gemini |
| ✅ 시그니처 폴리시 | 시간대/토큰보드/강제야간/감정/MBTI |
| ✅ **성장 루프 완성** | 활동 카운터 → 진급/메모리/칭찬 실동작 (v0.0.2) |
| ✅ **첫 사용자 온보딩** | 문 비서 튜토리얼 + 데모 모드 (v0.0.1 T1 피드백 대응) |
| ✅ **테스트 그물** | vitest 유닛 24 + Playwright E2E 9 |
| ✅ **실배포** | portable EXE v0.0.1 GitHub Releases → 외부 테스터 (v0.0.2 빌드 완료, 업로드 대기) |
| ✅ 의사결정 문서화 | 기획 문서 + 세션 로그(Day 1~14) |

### 9.2 배포 단계 가설 (미래)

| 지표 | 가설값 |
|---|---|
| 첫 채팅까지 시간 | < 5분 (다운로드 → 튜토리얼 → 첫 응답) |
| 튜토리얼 완주율 | 추적 시작 (v0.0.2 핵심 검증) |
| 채용 직원 평균 | 1.5명 / 사용자 |
| 7일 리텐션 | 20% 이상 (해자 검증의 핵심 신호) |

---

## 10. Roadmap · 마일스톤

```
✅ M0 기획            ─ 기획 문서 + 와이어프레임 + mockup
✅ M1 기본 UI         ─ Electron + Phaser + React, mock 응답
✅ M2 UI 채널         ─ 채용/메모/설정 모달, JSON 영속화
✅ M3 다중 LLM        ─ Claude + Gemini, OS 키체인, E2E
✅ M4 Rate-limit UX   ─ RPM 차단, 친절 에러, 사용량 시각화
✅ M5 시그니처        ─ 자리/팀, 시간대, 토큰보드, 강제야간
✅ Day 7~8           ─ 자리이동·책상회전, Platform Adapter
✅ Day 10~11         ─ layout, 팻말, v2.5(보존), 가구 배치
✅ Day 12 (v0.0.1)   ─ 감정 12종 + MBTI 16종 + 상점 + 모달 UX + EXE 1차 배포
✅ Day 13            ─ 활동 카운터 + 진급 + 메모리 + 칭찬 실동작 (M6/M7 완성)
✅ Day 14 (v0.0.2)   ─ 문 비서 튜토리얼/온보딩 + 일일 비용 실제 차단 + 테스트 그물 + 버그픽스
📋 v3 (출시 후)       ─ 리팩토링(god-file/eventBus) + 해자 전략 + CI + 메모리 자동압축
📋 Phase 3 백엔드     ─ BYOK 프록시 (모바일 기반)
📋 Phase 5 모바일     ─ Tauri/Capacitor
📋 PNG asset          ─ 고해상도 캐릭터/가구 → v2.5 부활
```

---

## 11. Risks · 위험 및 미정 사항

### 11.1 기술적 위험

| 위험 | 영향 | 완화책 |
|---|---|---|
| 픽셀 12×12 시각 한계 | 중 | PNG asset 도입 시 부활 (코드 보존 완료) |
| EXE 코드 사인 부재 | 중 | SmartScreen 경고 → 안내문 동행, 추후 인증서 |
| LLM API 정책 변화 | 중 | Provider abstraction |
| **기술 부채(god-file·eventBus 타입)** | 중 | v3 리팩토링 예정 — 현재는 동작·검증 우선 |

### 11.2 제품·비즈니스 위험

| 위험 | 영향 | 완화책 |
|---|---|---|
| **차별점이 약함 (해자 미검증)** | **큼** | §2.4·§8.3 정직 기록 → v3 해자 전략. 리텐션 신호로 판단 |
| 사용자 진입 부담(결제) | 큼 | 데모 모드 + 백엔드 프록시(Phase 3) |
| 기능 과다 → 첫 사용자 압도 | 중 | ✅ **문 비서 튜토리얼/온보딩 도입(v0.0.2)** — T1 피드백 대응 완료 |
| Clawd 캐릭터 라이선스 | 저 | 배포 직전 자체 캐릭터 교체(swappable) |

### 11.3 미결정 사항

- [ ] **해자(차별화) 전략 구체화** — 멀티 에이전트 협업 / 로컬 작업 연동 / 캐릭터 성장 서사 중 (v3)
- [ ] 메모리 4모드 셀렉터 재노출 시점 + 야간 자동 압축
- [ ] 백엔드 SaaS 전환 시점
- [ ] Groq 추가 / 데모 모드 확장
- [ ] Phase 2 Seegene 임포트 인증

---

## 12. Appendix · 부록

### 12.1 의사결정 일지 (요약)

전체 흐름은 세션 로그(brainstorming-log, Day 1~14) 참조. 핵심 전환점:
- 🔄 *"제약이 결정을 명확하게 했다"* — 배포 자동화 요구 → Electron 채택
- 🔄 *"사용자 인사이트가 아키텍처를 단순화"* — 동생 페르소나 채팅 → 이중 모드
- 🔄 *"에러가 폴리시로 격상"* — 토큰 고갈 → 강제 야간 시그니처
- 🔄 *"감정/MBTI가 캐릭터 개성으로"* — 12 emotion + MBTI 페르소나 (Day 12)
- 🔄 *"카운터가 성장 루프로"* — 활동 추적 연결 → 진급/메모리/칭찬 살림 (Day 13)
- 🔄 *"피드백이 온보딩으로"* — 테스터 T1 "튜토리얼 필요" → 문 비서 튜토리얼 (Day 14)
- 🔄 *"정직이 다음 전략으로"* — 차별점이 약함을 인정 → 해자 전략 v3 보류 결정 (Day 14, §2.4)

### 12.2 정직성 노트 (포트폴리오용) ★ 강화

본 PRD는 "완성된 것처럼 보이기"보다 **현재 상태를 정확히** 기록한다:
- ✅ 완성·검증 / 🟡 부분·의도적 보류 / 📋 계획 을 명확히 구분
- v0.0.1에서 🟡였던 진급·메모리·칭찬을 v0.0.2에서 ✅로 정직하게 승격하되, **메모리 4모드 셀렉터는 숨김(🟡)** 임을 명시
- **차별점·사업성이 약하다는 사실(§2.4·§8.3)을 숨기지 않고 기록** — "무엇을 만들었나"만큼 "무엇이 약하고 무엇이 남았는지 정확히 아는가"가 기획 역량
- 알려진 기술 부채(§7.2)와 해자 미검증(§11.2)을 위험으로 명시하고 v3로 이월

### 12.3 시각·코드 산출물 (v0.0.2)

> v0.0.2 EXE 빌드 완료 → 산출물 동기화됨.

| 문서 | 상태 |
|---|---|
| 📐 [wireframes.html](wireframes.html) | ✅ v0.0.2 — 버전 라벨·온보딩(문 비서) 갱신. 화면 골격은 v0.0.1과 동일(모달·채팅·사무실), 추가 시각 요소(튜토리얼 오버레이·진급 모달·API 키 미니팝업)는 §6.1 참조 |
| 🔀 [user-flow.md](user-flow.md) | ✅ v0.0.2 — 문 비서 튜토리얼·진급 플로우 추가, 진급/메모리/칭찬 ✅ 승격 |
| 📋 [FEATURES.md](FEATURES.md) | ✅ 루트 최신본 동기화 |
| 📦 [code-snapshot/](code-snapshot/) | ✅ v0.0.2 소스 스냅샷 (src + electron + tests + 설정, package.json 0.0.2) |

---

## 🎯 핵심 메시지 (기획자 관점에서 자랑스러운 것)

1. **사용자 행동 관찰에서 시작** — 동생의 페르소나 채팅 패턴 → 시장 빈자리 발견
2. **제약을 일찍 파악** — 배포 자동화 / Anthropic ToS / Gemini quota 사전 검증
3. **재미를 핵심 가치로 격상** — 토큰 고갈을 시그니처로, 감정·MBTI로 캐릭터 개성 부여
4. **성장 루프 완성** — 활동 카운터를 진급·메모리·칭찬으로 연결해 "키우는 재미" 구현 (Day 13)
5. **피드백을 온보딩으로** — 테스터 "튜토리얼 필요"를 문 비서 튜토리얼로 응답 (Day 14)
6. **품질 그물** — vitest 유닛 + Playwright E2E로 회귀 방어
7. **정직한 자기 평가** — 차별점·사업성이 약함을 인정하고 해자 전략을 v3로 명시 이월 (§2.4)

---

**작성**: 2026-06-24 (Day 14, v0.0.2 준비)
**이전 버전**: [v0.0.1 PRD](../v0.0.1/PRD.md) (2026-05-26, Day 12) · [v0.0.0 PRD](../v0.0.0/PRD.md) (2026-05-18, M3)
**다음 갱신**: 다음 버전 스냅샷을 만들 때 정직 갱신 (PRD는 버전 단위 문서). v0.0.2 시각/코드 산출물은 빌드 완료로 동기화됨.
